# battleship

./: README.md
battleship-plas2014/: .gitignore  README.txt
battleship-plas2014/cml-ac/: README.txt  build
battleship-plas2014/cml-ac/src/: aux.sig  aux.sml  battleship.cm  board-untrusted.sig  board-untrusted.sml  board.sig  board.sml  client.sig  command.sig  command.sml  key.sig  key.sml  main.sig  main.sml  matrix-untrusted.sml  matrix.sig  player-interface-msg.sig  player-interface-msg.sml  player-interface.sig  player-interface.sml  player.sig  player.sml  ship.sig  shot-board.sml
battleship-plas2014/cml-ac/src/.cm/GUID/: aux.sig  aux.sml  board-untrusted.sig  board-untrusted.sml  board.sig  board.sml  client.sig  client.sml  command.sig  command.sml  key.sig  key.sml  main.sig  main.sml  matrix-untrusted.sig  matrix-untrusted.sml  matrix.sig  matrix.sml  player-interface-msg.sig  player-interface-msg.sml  player-interface.sig  player-interface.sml  player.sig  player.sml  ship.sig  ship.sml  shot-board.sig  shot-board.sml
battleship-plas2014/cml-ac/src/.cm/SKEL/: aux.sml  board-untrusted.sig  board-untrusted.sml  board.sig  board.sml  client.sig  command.sml  key.sig  key.sml  main.sml  matrix.sig  matrix.sml  player-interface-msg.sig  player-interface-msg.sml  player-interface.sig  player-interface.sml  player.sig  ship.sig  ship.sml  shot-board.sig  shot-board.sml
battleship-plas2014/cml-ac/src/.cm/amd64-unix/: aux.sig  (+27 more)
battleship-plas2014/cml-referee/: .gitignore  README.txt  build
battleship-plas2014/cml-referee/src/: battleship.cm  board-untrusted.sig  board-untrusted.sml  board.sig  board.sml  client.sig  client.sml  main.sml  matrix-untrusted.sig  matrix.sml  player.sig  player.sml  referee.sig  referee.sml  ship.sig  ship.sml  shot-board.sig
battleship-plas2014/lio/: ORGANIZATION.txt  README.txt  battleship.cabal  build
battleship-plas2014/lio/html/battleship/: Aux.html  Board.html  BoardUntrusted.html  Client.html  Command.html  Main.html  Matrix.html  MatrixUntrusted.html  Once.html  Player.html  PlayerInterface.html  PlayerInterfaceMsg.html  Ship.html  ShotBoard.html  Sys.html  UnsafeSys.html  battleship.haddock  doc-index.html  index-frames.html  index.html  mini_Aux.html  mini_Board.html  mini_BoardUntrusted.html  mini_Client.html  mini_Command.html  mini_Matrix.html  mini_MatrixUntrusted.html  mini_Once.html  mini_Player.html  mini_PlayerInterface.html  mini_PlayerInterfaceMsg.html  mini_Ship.html  mini_ShotBoard.html  mini_Sys.html  mini_UnsafeSys.html
battleship-plas2014/lio/src/: Aux.hs  Board.hs  BoardUntrusted.hs  Client.hs  Command.hs  Main.hs  Matrix.hs  MatrixUntrusted.hs  Once.hs  Player.hs  PlayerInterface.hs  PlayerInterfaceMsg.hs  Ship.hs  ShotBoard.hs  Sys.hs  UnsafeSys.hs
(+61 files in other folders)
